--- a/csce242/assignments/assignment09/styles.css
+++ b/csce242/assignments/assignment09/styles.css
@@ -8,7 +8,7 @@ body {
     width: 200px;
     position: relative;
 }
-.ladder {
+.stair {
     width: 150px;
     height: 250px;
     position: relative;
@@ -16,7 +16,7 @@ body {
     border-right: 5px solid black;
     margin: 20px auto;
 }
-.rung, .stair {
+.rung {
     width: 100%;
     height: 5px;
     background-color: black;
@@ -28,15 +28,4 @@ body {
     left: 50%;
     transform: translateX(-50%);
     transition: 0.5s;
-    display: none;
-    bottom: 12px;
-    width:50px;
-}
-#controls {
-    display: none;
-    margin-top: 10px;
-}
-#author {
-    transition: 0.5s;
-    display: block;
 }
