--- a/csce242/assignments/assignment09/styles.css
+++ b/csce242/assignments/assignment09/styles.css
@@ -6,22 +6,12 @@ body {
 #container {
     margin: auto;
     width: 200px;
-    position: relative;
 }
 .stair {
     width: 150px;
-    height: 250px;
-    position: relative;
-    border-left: 5px solid black;
-    border-right: 5px solid black;
-    margin: 20px auto;
-}
-.rung {
-    width: 100%;
-    height: 5px;
-    background-color: black;
-    position: absolute;
-    left: 0;
+    height: 20px;
+    background-color: #333;
+    margin: 5px auto;
 }
 #stickFigure {
     position: absolute;
