--- a/csce242/assignments/assignment09/styles.css
+++ b/csce242/assignments/assignment09/styles.css
@@ -16,7 +16,7 @@ body {
 }
 .ladder {
     width: 150px;
-    height: 275px;
+    height: 250px;
     position: relative;
     border-left: 5px solid black;
     border-right: 5px solid black;
@@ -27,4 +27,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     transition: 0.5s;
+}
+button {
+    justify-content: center;
 }
