--- a/csce242/assignments/assignment10/styles.css
+++ b/csce242/assignments/assignment10/styles.css
@@ -32,7 +32,7 @@ h2 {
 }
 .popup img {
     max-width: 100%;
-    height: 200px;
+    height: 250px;
     display: block;
     margin: 10px auto;
 }
@@ -57,5 +57,5 @@ h2 {
 }
 .attribution .underline {
     text-decoration: underline;
-    color:black;
+    color:#5a6b6b;
 }
